# pyHRMC

./: .gitattributes  .gitignore  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
background_theory/: index.html
compatbility/: index.html
core/: interpolator.py  rmc.py  rmc_rdf.py  slab.py
docs/: about.md  background_theory.md  compatbility.md  index.md  installation.md  user_guide.md
docs/css/: extra.css
docs/javascripts/: mathjax.js
docs/user_guide/: bulk_vs_slab.md  examples.md  nonhybrid_setup.md  validator_selection.md
docs/user_guide/getting_started/: lammps_input.md  outputs.md  required_files.md  runfile_setup.md
example/: 7ps_blur2.txt  crystal_d3_slab.vasp  in.lmp  in_accept.lmp  in_init.lmp  runfile_hrmc.py  runfile_rmc.py
installation/: index.html
pyHRMC/core/: hrmc.py  interpolator.py  rmc.py  rmc_rdf.py  slab.py
pyHRMC/transformers/: __init__.py  atom_hop.py
pyHRMC/validators/: __init__.py  base.py  coordination.py  distances_coordination.py  site_distance.py  slab_thickness.py  target_density.py
pyhrmc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyhrmc/core/: energy.py  hrmc.py  interpolator.py  rdf.py  rmc.py  rmc_rdf.py  slab.py  sq_to_gr.py  structure.py
pyhrmc/transformers/: atom_hop.py  base.py
pyhrmc/validators/: __init__.py  base.py  coordination.py  distances_coordination.py  site_distance.py  slab_thickness.py  target_density.py
search/: search_index.json
structure/: __init__.py  coordination.py  distances_coordination.py  target_density.py
tests/: s_L_inv_lmp.flare  s_sparse_desc_lmp.flare  test_slab.py
tests/data/: POSCAR_47A-d33  al2o3_5nm_gr.txt  in.lmp  in_accept.lmp  in_init.lmp  s_lmp.flare  ularge_3.0.vasp
transformers/: __init__.py  atom_hop.py
user_guide/: index.html
user_guide/bulk_vs_slab/: index.html
user_guide/examples/: index.html
user_guide/getting_started/lammps_input/: index.html
user_guide/getting_started/outputs/: index.html
user_guide/getting_started/required_files/: index.html
user_guide/getting_started/runfile_setup/: index.html
user_guide/nonhybrid_setup/: index.html
user_guide/validator_selection/: index.html
